# pfms

./: .gitignore  GIT_HELP.md  README.md
quizzes/quiz0/: README.md  TEST.txt
quizzes/quiz0/a1/: CMakeLists.txt  arrays.cpp  main.cpp
quizzes/quiz0/a2/: CMakeLists.txt  main.cpp  sample.cpp  sample.h
quizzes/quiz1/: README.md  TEST.txt
quizzes/quiz1/a1/: CMakeLists.txt  main.cpp  person.cpp  person.h  processing.cpp  processing.h
quizzes/quiz1/a2/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h  shape.h
quizzes/quiz2/: README.md  TEST.txt
quizzes/quiz2/a1/: CMakeLists.txt  analysis.cpp  analysis.h  analysisinterface.h  circle.cpp  circle.h  geometry_msgs.h  line.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h  triangle.cpp  triangle.h
quizzes/quiz2/a1/marking/: CMakeLists.txt  utest.cpp
quizzes/quiz2/a1/test/: CMakeLists.txt  utest.cpp
quizzes/quiz2/a2/: CMakeLists.txt  container_ops.cpp  main.cpp
quizzes/quiz3/: README.md  TEST.txt
quizzes/quiz3/a1/: CMakeLists.txt  analysis.cpp  analysis.h  display_race.cpp  display_race.h  main.cpp
quizzes/quiz3/a1/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
quizzes/quiz3/a1/test/: utest.cpp
quizzes/quiz3/a2/: CMakeLists.txt  analysis.cpp
quizzes/quiz4/: README.md  TEST.txt
quizzes/quiz5/: README.md  TEST.txt
scratch/: Cone curve points  a2.code-workspace
scratch/a1_skeleton/: CMakeLists.txt  Doxyfile.bak  analysis.cpp  analysis.h  index.dox  laser.cpp  laser.h  main.cpp  ranger.cpp  ranger.h  rangerfusion.cpp  rangerfusion.h  rangerfusioninterface.h  rangerinterface.h  sonar.cpp  sonar.h
scratch/a1_skeleton/html/: analysis_8cpp_source.html  analysis_8h.html  analysis_8h__dep__incl.map  analysis_8h__dep__incl.md5  analysis_8h__incl.map  analysis_8h__incl.md5  analysis_8h_source.html  annotated.html  bug.html  cell_8cpp_source.html  classLaser-members.html  classLaser.html  classLaser__coll__graph.map  classLaser__coll__graph.md5  classLaser__inherit__graph.map  classLaser__inherit__graph.md5  classRanger-members.html  classRanger.html  classRangerFusion-members.html  classRangerFusion.html  classRangerFusionInterface.html  classRangerInterface-members.html  classRangerInterface.html  classRangerInterface__inherit__graph.map  classRangerInterface__inherit__graph.md5  classRanger__coll__graph.map  classRanger__coll__graph.md5  classRanger__inherit__graph.map  classRanger__inherit__graph.md5  classSonar-members.html  classSonar.html  classSonar__coll__graph.map  classSonar__coll__graph.md5  classSonar__inherit__graph.map  classSonar__inherit__graph.md5  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  (+26 more)
scratch/a1_skeleton/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  variables_4.js
scratch/a1_skeleton/latex/: analysis_8h.tex  analysis_8h__dep__incl.md5  analysis_8h__incl.md5  annotated.tex  bug.tex  classLaser.tex  classLaser__coll__graph.md5  classLaser__inherit__graph.md5  classRanger.tex  classRangerFusion.tex  classRangerFusionInterface.tex  classRangerInterface.tex  classRangerInterface__inherit__graph.md5  classRanger__coll__graph.md5  classRanger__inherit__graph.md5  classSonar.tex  classSonar__coll__graph.md5  classSonar__inherit__graph.md5  files.tex  hierarchy.tex  index.tex  namespacegeometry__msgs.tex  namespaceranger.tex  namespaces.tex  refman.tex  structgeometry__msgs_1_1Point.tex
scratch/a1_skeleton/test/: test_fusion.cpp  test_rawdata.cpp
scratch/a2_skeleton/: CMakeLists.txt  bogiepos.cpp  bogiepos.h  bogieposAdv.cpp  bogieposAdv.h  bogieposinterface.h  control.cpp  control.h  controlAdv.cpp  controlAdv.h  index.dox  main.cpp
scratch/a2_skeleton/test/: CMakeLists.txt  associationtest.cpp  bogieextrapolationtest.cpp  mockbogiepos.cpp  mockbogiepos.h  mockbogieposAdv.cpp  mockiebogieposAdv.h  posetest.cpp
scratch/ass3/: CMakeLists.txt  mainpage.dox  package.xml  workspace.code-workspace
skeleton/a1_skeleton/: CMakeLists.txt  rangerfusion.h  rangerfusioninterface.h
skeleton/a1_test/: CMakeLists.txt  README.md  test_advanced_fusion.cpp  test_angle.cpp  test_fusion.cpp  test_gettersetter.cpp  test_invokesensordata.cpp  test_laser_fusion.cpp  test_multi_sensors.cpp  test_pure_virtual.cpp  test_rangerfusioninterface.cpp  test_rangerinterface.cpp  test_rawdata.cpp  test_rawdatarange.cpp  test_sensor_ordering.cpp  test_sensorconstructors.cpp  test_simple_fusion.cpp  test_sonar_fusion.cpp  test_sonararea.cpp  test_timing.cpp
skeleton/a1_test/mock/: mockrangerfusion.cpp  mockrangerfusion.h  rangermocklaser.cpp  rangermocklaser.h  rangermocksonar.cpp  rangermocksonar.h
skeleton/a2_skeleton/: CMakeLists.txt  main.cpp
skeleton/a2_skeleton/test/: CMakeLists.txt  associationtest.cpp  bogieextrapolationtest.cpp  posetest.cpp
skeleton/a3_skeleton/: CMakeLists.txt  mainpage.dox  package.xml
tutorials/week01/: LINUX_BUILD_SYSTEM_IDE.md  PREWORK.md  README.md  TUTORIAL.md
tutorials/week02/: TUTORIAL.md
tutorials/week03/: TUTORIAL.md
tutorials/week04/: PREWORK.md  README.md  TUTORIAL.md
tutorials/week05/: TUTORIAL.md
tutorials/week06/: PREWORK.md  README.md  TUTORIAL.md
tutorials/week07/: README.md  TUTORIAL.md
tutorials/week08/: README.md  TUTORIAL.md
tutorials/week08/examples/ex01/: CMakeLists.txt  main.cpp
tutorials/week08/examples/ex01/dep/include/: cell.h  ranger.h  rangerfusion.h  rangerinterface.h
tutorials/week08/examples/ex01/mock/: mockrangerfusion.cpp  mockrangerfusion.h
tutorials/week08/examples/ex01/test/: CMakeLists.txt  utest_fusion.cpp  utest_rawdata.cpp
tutorials/week08/starter/ex01/: CMakeLists.txt  main.cpp
tutorials/week08/starter/ex01/dep/include/: laser.h  rangerfusioninterface.h  sonar.h
tutorials/week08/starter/ex01/test/: utest_fusion.cpp  utest_rawdata.cpp
tutorials/week10/: README.md  TUTORIAL.md
tutorials/week11/: README.md  TUTORIAL.md
(+451 files in other folders)
